syntax = "proto3";

option csharp_namespace = "Otus.Grpc";

package carPackage;
service CarProvider {
  rpc GetCar (CarRequest) returns (CarReply);
}

// Тип кузова
enum BodyType {
  STATION_WAGON = 2;
  LIFTBACK = 3;
}

message Document{
  int32 id = 1;
  string comment = 3;
}

// Запрос
message CarRequest {
  int64 id = 1;  
}

// The response message containing the greetings.
message CarReply {
  int64 id = 1;
  string name = 2;
  repeated Document documents = 3;
  BodyType bodyType = 4;
}
